[gd_scene load_steps=19 format=2]

[ext_resource path="res://sprites/Background.png" type="Texture" id=1]
[ext_resource path="res://sprites/blobfish.webp" type="Texture" id=2]
[ext_resource path="res://fonts/NES.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/Battle.gd" type="Script" id=4]
[ext_resource path="res://src/Blobfish.tres" type="Resource" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.294118, 0.992157, 0.00392157, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.00784314, 0.00784314, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.509804 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFontData" id=7]
antialiased = false
font_path = "res://fonts/Adventurer.ttf"

[sub_resource type="DynamicFont" id=8]
font_data = SubResource( 7 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EnemyContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "enemy_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "enemy_died"
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "mini_shake"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, -2 ), Vector2( 2, 2 ), Vector2( -2, 2 ), Vector2( 1, -2 ), Vector2( -3, -2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "shake"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -7, -7 ), Vector2( 8, 8 ), Vector2( -5, 6 ), Vector2( 5, -4 ), Vector2( -7, -5 ), Vector2( 0, 0 ) ]
}

[node name="Battle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
enemy = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -91.0
margin_top = -11.0
margin_right = -618.0
margin_bottom = -331.0
rect_scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.635
anchor_right = 0.509
anchor_bottom = 0.653
margin_left = -77.0
margin_top = -116.0
margin_right = 57.784
margin_bottom = 65.2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="EnemyContainer"]
margin_right = 144.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="EnemyContainer/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_right = 1.0
margin_bottom = 2.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy" type="TextureRect" parent="EnemyContainer"]
margin_top = 20.0
margin_right = 144.0
margin_bottom = 148.0
texture = ExtResource( 2 )
stretch_mode = 6

[node name="PlayerPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = -39.0
margin_right = -29.0
margin_bottom = -2.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -2.0
margin_right = -11.0
margin_bottom = -2.0
alignment = 1

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
margin_top = 8.0
margin_right = 474.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "PLAYER"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData"]
margin_left = 478.0
margin_top = 10.0
margin_right = 953.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 50.0
step = 1.0
value = 25.0
percent_visible = false

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "HP: 25/50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionsPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -180.0
margin_top = 98.0
margin_right = 184.0
margin_bottom = 140.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Actions" type="HBoxContainer" parent="ActionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0
custom_constants/separation = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="Button" parent="ActionsPanel/Actions"]
margin_right = 113.0
margin_bottom = 30.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "Attack"

[node name="Defend" type="Button" parent="ActionsPanel/Actions"]
margin_left = 119.0
margin_right = 232.0
margin_bottom = 30.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "Defend"

[node name="Run" type="Button" parent="ActionsPanel/Actions"]
margin_left = 238.0
margin_right = 352.0
margin_bottom = 30.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "Run"

[node name="ActionsPanel2" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -167.0
margin_top = 220.0
margin_right = 153.0
margin_bottom = 252.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Actions2" type="HBoxContainer" parent="ActionsPanel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 87.0
margin_top = 6.0
margin_right = -84.0
margin_bottom = -5.0
custom_constants/separation = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Button" parent="ActionsPanel2/Actions2"]
margin_right = 45.0
margin_bottom = 22.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "a"

[node name="2" type="Button" parent="ActionsPanel2/Actions2"]
margin_left = 51.0
margin_right = 97.0
margin_bottom = 22.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "b"

[node name="3" type="Button" parent="ActionsPanel2/Actions2"]
margin_left = 103.0
margin_right = 149.0
margin_bottom = 22.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "c"

[node name="Textbox" type="Panel" parent="."]
visible = false
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 64.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Textbox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 8 )
text = "A DRAGON appears!"

[node name="Ticker" type="Label" parent="Textbox"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -11.0
margin_top = -19.0
margin_right = -4.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 8 )
text = ">"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/enemy_damaged = SubResource( 9 )
anims/enemy_died = SubResource( 13 )
anims/mini_shake = SubResource( 12 )
anims/shake = SubResource( 11 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[connection signal="pressed" from="ActionsPanel/Actions/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Defend" to="." method="_on_Defend_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="ActionsPanel2/Actions2/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="ActionsPanel2/Actions2/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="ActionsPanel2/Actions2/3" to="." method="_on_3_pressed"]
